--- a/project.json
+++ b/project.json
@@ -1,26 +1,26 @@
 [
   {
     "name": "Gaming Haven",
-    "image": "./assets/Gaming-Haven.jpg",
-    "link": "https://gaming-haven.vercel.app/",
+    "image": "./assets/gaming.png",
+    "liveLink": "https://gaming-haven.vercel.app/",
     "githubLink": "https://github.com/ameh-samson/Gaming-Haven"
   },
   {
     "name": "YIP Online",
-    "image": "./assets/project2.jpg",
+    "image": "./assets/YIPONLINE.png",
     "liveLink": "https://yiponline-chi.vercel.app/",
     "githubLink": "https://github.com/ameh-samson/yiponline"
   },
   {
     "name": "Meal Mingle",
-    "image": "./assets/Meal-Mingle.jpg",
+    "image": "./assets/meal-mingle.png",
     "liveLink": "https://meal-mingle.vercel.app/",
     "githubLink": "https://github.com/ameh-samson/MealMingle"
   },
 
   {
     "name": "Quote Generator",
-    "image": "./assets/Quote-generator.jpg",
+    "image": "./assets/quote-generator.png",
     "liveLink": "https://quote-generator-machine.vercel.app/",
     "githubLink": "https://github.com/ameh-samson/quote-generator-machine"
   }
